--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Step Tracker Navigation</title>
+  <title>Distance Tracker Navigation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -30,8 +30,8 @@
     }
     #map {
       margin-top: 20px;
-      width: 500px;
-      height: 500px;
+      width: 600px;
+      height: 600px;
       position: relative;
       background: #fff;
       border: 2px solid #ccc;
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <h1>Step Navigation</h1>
+  <h1>Distance-Based Navigation</h1>
 
   <select id="routeSelect">
     <option value="">Select Route</option>
@@ -71,12 +71,12 @@
     const stepCountText = document.getElementById("stepCount");
     const routeSelect = document.getElementById("routeSelect");
 
+    let tracker, path = [], stepIndex = 0;
+    let totalSteps = 0;
     let stepsRemaining = 0;
-    let tracker;
-    let path = [];
-    let stepIndex = 0;
 
-    const STEP_SIZE = 6;
+    const STEP_LENGTH = 0.7; // in meters
+    const STEP_SIZE = 6;     // pixel spacing between dots
 
     const routes = {
       "A-B": {
@@ -138,36 +138,46 @@
       const selected = routeSelect.value;
       if (!selected || !routes[selected]) return;
 
-      stepsRemaining = routes[selected].steps;
-      stepIndex = 0;
       path = routes[selected].path;
+      totalSteps = routes[selected].steps;
+      stepsRemaining = totalSteps;
+      stepIndex = 0;
+      cumulativeDistance = 0;
+      velocity = 0;
 
       drawPath(path);
       updateStepText();
     });
 
     function updateStepText() {
-      stepCountText.innerText = "Steps Remaining: " + stepsRemaining;
+      stepCountText.innerText = `Steps Remaining: ${stepsRemaining}`;
     }
 
-    // Step detection logic
-    let lastStepTime = 0;
-    let threshold = 15;
+    // Motion Tracking
+    let lastTime = Date.now();
+    let velocity = 0;
+    let cumulativeDistance = 0;
 
     if (window.DeviceMotionEvent) {
       window.addEventListener("devicemotion", event => {
         const acc = event.accelerationIncludingGravity;
         if (!acc) return;
 
-        const totalAcc = Math.sqrt(acc.x ** 2 + acc.y ** 2 + acc.z ** 2);
         const now = Date.now();
+        const dt = (now - lastTime) / 1000;
+        lastTime = now;
 
-        if (totalAcc > threshold && now - lastStepTime > 400 && stepsRemaining > 0) {
+        const a = Math.sqrt(acc.x ** 2 + acc.y ** 2 + acc.z ** 2) - 9.8; // remove gravity
+        velocity += a * dt;
+        const d = Math.abs(velocity * dt);
+        cumulativeDistance += d;
+
+        if (cumulativeDistance >= STEP_LENGTH && stepsRemaining > 0) {
+          cumulativeDistance = 0;
           stepsRemaining--;
           stepIndex++;
           updateStepText();
           moveTracker();
-          lastStepTime = now;
         }
       });
     }
